--- a/wedding/app/assets/stylesheets/jquery.maximage.css
+++ b/wedding/app/assets/stylesheets/jquery.maximage.css
@@ -16,12 +16,12 @@
 }
 
 body .mc-cycle {
-	height:100%;
+	height:50%;
 	left:0;
 	overflow:hidden;
 	position:fixed;
 	top:0;
-	width:100%;
+	width:50%;
 	z-index:-1;
 }
 
@@ -38,16 +38,16 @@ div.mc-image {
 	-moz-transition: left 1s ease-in-out; 
 	-o-transition: left 1s ease-in-out; 
 	transition: left 1s ease-in-out;*/
-	
+	/*
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
-	background-size: cover;
+	background-size: cover;*/
 	background-position:center center;
 	background-repeat:no-repeat;
-	height:100%;
+	height:30%%;
 	overflow:hidden;
-	width:100%;
+	width:30%;
 }
 
 .mc-old-browser .mc-image {
