--- a/wedding/app/assets/stylesheets/profile.css
+++ b/wedding/app/assets/stylesheets/profile.css
@@ -15,6 +15,10 @@ body
     top: 0px; 
     z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
 }
+#innerBack
+{
+   
+}
 #profile_desc{
 	font-size: 25px;
 }
@@ -28,10 +32,12 @@ body
 }
 #profile_main-content
 {
-    margin: 5%;
-    width: 90%;
-    margin-top:50px;
-    background-color:#EFDECD;
+   /* margin: 5%; */
+    width: 70%;
+    margin-top: 18%;
+    background-color:transparent;
+   /* background-color: red;*/
+
 }
 #profile_pic img
 {
@@ -51,5 +57,12 @@ body
 }
 #new-msg-btn:hover{
     background-color:#A85D8A;
+}
+#outBox{
+  padding-top: 10%;
+}
+#
+{
+  background-color: #E2E2DD;
 }
 
