--- a/wedding/app/views/profiles/show.html.erb
+++ b/wedding/app/views/profiles/show.html.erb
@@ -45,13 +45,13 @@
     <link href="css/profile.css" rel="stylesheet">
         <link href="css/font.css" rel="stylesheet">
   </head>
-  <body id = "">
-    <div id="profile_background">
+  <body id = "" align="center">
+    <div id="profile_background" >
       <img src="images/home.jpg" class="stretch" alt="" />
-      <%= link_to image_tag ("home.jpg") , :class => "stretch" %>
+      <%= link_to image_tag ("head.png") , :class => "stretch" %>
     </div>
-        <%= render "layouts/navbar" , :locals => {:brand => "پروفایل ما"}%>
-        <div class="jumbotron" id = "profile_main-content">
+      <%= render "layouts/navbar" , :locals => {:brand => "پروفایل ما"}%>
+        <div class="col-md-offset-2 col-md-8 col-md-offset-2 jumbotron " id = "profile_main-content">
             <div class = "row">
                 <div class="col-md-8">
                     <div class="panel panel-danger" id ="box">
@@ -83,15 +83,19 @@
             </div>
             <br>
             <br>
-            <div class="row container">
+            <div class="row container" id = "foott">
                 <a>
+                <div align="center">
                     <%= button_to  "ویرایش اطلاعات", edit_profile_path, :class => 'btn btn-primary', :type=>'button', :id=>'profile_new-msg-btn'  ,:method => :get%> </a>
                     <!-- <a class="btn btn-primary" role="button" id ="new-msg-btn">ویرایش اطلاعات</a> 
                     <a class="btn btn-danger" role="button" > حذف حساب کاربری</a> -->
-
+                </div>
                 <a>
-                    <%= button_to  "حذف حساب کاربری", edit_profile_path, :class => 'btn btn-primary', :type=>'button', :method => :get%> </a>
             </div>
+
+
+      
+
         </div>
         <script src="js/jquery.min.js"></script>
       <script src="js/bootstrap.min.js"></script>     
