--- a/wedding/app/views/welcome/index.html.erb
+++ b/wedding/app/views/welcome/index.html.erb
@@ -7,108 +7,181 @@
 		<meta name="language" content="en" />
      	<meta content='width=device-width, initial-scale=1.0' name='viewport' />
 	</head>
-	<body>
+	<body id="welcome">
+    <div class = "container-fluid" id = "home-nav"> 
+	<nav class="navbar navbar-default navbar-fixed" role="navigation" id ="homeNav">
+            <div class="container-fluid wed-nav" id ="homeNav">
+                    <a class="navbar-brand" href="information.html"></a>
+                     <!--<%= form_tag '/home/search', :method => :get do%>
+                    <%= text_field_tag :q%>
+                    <%= submit_tag 'search'%>
+                    <%end%>
+                    -->
+                    <ul class="nav navbar-nav navbar-right" id="innerNav" >
+                        <li id= "navText"><a href="#">خانه</a></li>
+                        <li id= "navText"> <a <%= link_to "خدمات", product_groups_path %> </a> </li>
+                        <li id= "navText"><a href="#">انجمن</a></li>
+                        <li id= "navText"><a href="#"  data-toggle="modal" data-target="#basicModal">ورود</a></li>  
+                    </ul>
+            </div>
+     </nav>
+  </div>
+  <div cladd = "container-fluid" id = "head">
+    <%=link_to image_tag("head.jpg", :alt => "Slide1", :size=>'900x120'), {:id=>"link", :class => "img-responsive", :alt => "Responsive image" } %>
+  </div>
+   <div class = "container-fluid" id = "slide">
+    <div id="carousel" class="carousel slide center" data-ride="carousel" align="center">
+        <ol class="carousel-indicators" margin: auto>
+          <li data-target="#carousel" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel" data-slide-to="1" ></li>
+          <li data-target="#carousel" data-slide-to="2" ></li>
+          <li data-target="#carousel" data-slide-to="3" ></li> 
+          <li data-target="#carousel" data-slide-to="4" ></li>  
+          <li data-target="#carousel" data-slide-to="5" ></li>  
+          <li data-target="#carousel" data-slide-to="6" ></li>
+          <li data-target="#carousel" data-slide-to="7" ></li>
+          <li data-target="#carousel" data-slide-to="8" ></li>       
+        </ol>
+        <div class="carousel-inner" margin: auto>
+          <div class="item active">
+            <%=link_to image_tag("111.jpg", :alt => "Slide1", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>       
+          </div>
+          <div class="item">
+            <%=link_to image_tag("222.jpg", :alt => "Slide2", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("333.jpg", :alt => "Slide3", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("444.jpg", :alt => "Slide4", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("555.jpg", :alt => "Slide5", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("666.jpg", :alt => "Slide6", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("777.jpg", :alt => "Slide7", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>
+          <div class="item">
+            <%=link_to image_tag("888.jpg", :alt => "Slide8", :size=>'900x400'), {:class => "img-responsive", :alt => "Responsive image"} %>
+          </div>       
+        </div>
+        
+    </div>        
+	</div>
+    <div class= "container-fluid" id = "contain-foot">
+        <div class="container col-md-4" id = "intro-Product">
+            
+            <li id = "intro-product-image" align="center">
+              <%=link_to image_tag("product.jpg", :size=>'350x300'), product_groups_path, {:class => "img-responsive", :alt => "Responsive image", :id=>"link"} %>
+            </li>
+            <li id="intro-product-text">
+              معرفی بهترین ارائه‌دهندگان خدمات عروسی در سراسر کشور
+            </li>
+            
+        </div>
+        <div class= "container col-md-4" id = "intro-Forum">
+        <li id = "intro-forum-image" align="center">
+            <%=link_to image_tag("forum.jpg", :size=>'350x300'), product_groups_path,  :class => "img-responsive", :alt => "Responsive image", :id=>"link" %>
+        </li>
+        <li id="intro-forum-text">
+            با دوستان خود مشورت کنید
+        </li>
+        </div>
+        <div class= "container col-md-4" id = "intro-Trello">
+        <li id = "intro-trello-image" align="center">
+            <%=link_to image_tag("WeddingPlanner.jpg", :size=>'350x300'), :class => "img-responsive", :alt => "Responsive image" , :id=>"link"%>
+        </li>
+        <li id="intro-trello-text">
+            با برنامه‌ریزی دقیق با آرامش به روز عروسی خود برسید
+        </li>
+        </div>
+    </div>
+  
 
-		<div id="maximage">
-        <%= link_to image_tag ("1.jpg") %>
-        <%= link_to image_tag ("2.jpg") %>
-        <%= link_to image_tag ("3.jpg") %>
-        <%= link_to image_tag ("4.jpg") %>
-        <%= link_to image_tag ("5.jpg") %>
-        <%= link_to image_tag ("6.jpg") %>
-        <%= link_to image_tag ("7.jpg") %>
-        <%= link_to image_tag ("8.jpg") %>
-		</div>
+
+
+
+
+<!--
 		<div id="signup-nav">
             <div id = "start" >
                <span class="glyphicon glyphicon-chevron-right"></span>
             </div> 
-            <!--<li><%= link_to "Edit Account", new_user_session_path %></li> -->
+            
              <div class="btn-group-vertical" id="start-btn">
-             <!--
-             <div id="main">
-                <%= link_to "Edit Account", new_user_session_path%></li>
-             </div>
-             --> 
+              
               <%= button_to  "خروج", destroy_user_session_path, :class => 'btn btn-sm btn-primary trans', :type=>'button', :id=>'sign_up_btns'  ,:method => :delete%>
                  
 
                 <%= button_to  "ثبت‌نام", new_user_registration_path, :class => 'btn btn-sm btn-primary trans', :type=>'button', :id=>'sign_up_btns'  ,:method => :get%>
-             <!-- <button   class="btn btn-sm btn-primary trans" type="button" id = "signup-btn">
-                    ثبت‌نام
-                </button> -->  
                  <a href="#" class="btn btn-sm btn-primary" data-toggle="modal" data-target="#basicModal">
                  ورود
                  </a>
             </div>
         </div>
 
-        
+    -->    
+    <div class = "container-fuid">
         <div class="modal fade" id="basicModal" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
         
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <!--
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">ورود</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="input-group">
-                            <label>نام کاربری </label>
-                            <input type="text" class ="col-md-6" >
-                        </div>
-                        <div class="input-group ">
-                            <label> گذرواژه </label>
-                            <input type="password" class ="col-md-6">
-                        </div>
-                    </div>
-                    -->
+                  
                     <%= form_for(:user, :url => session_path(:user)) do |f| %>
-                        <%= f.text_field :email %>
-                        <%= f.password_field :password %>
-                        <%= f.check_box :remember_me %>
-                        <%= f.label :remember_me %>
-                        <%= f.submit 'Sign in' %>
-                        <%= link_to "Forgot your password?", new_password_path(:user) %>
-                    <% end %>
+                        <div id = "email_field" align="center">
+                         <%= f.text_field :email %>
+                        </div>
+                         <br>
+                        <div id = "pass_field"  align= "center">
+                            <%= f.password_field :password %> <br>
+                        </div>
+                        <div align="center">
+                            <%= f.check_box :remember_me %>
+                            <%= f.label :"مرا به خاطر بسپار" %>
+                        </div>
+                       
+                  
+                  
                     <!--
                     <p>
                         <a href="url" data-toggle="modal" data-target="#smallModal" id="frgt-pass-link" aria-hidden="true">گذرواژه‌ی خود را فراموش کرده‌اید؟</a>
                     </p>
                     -->
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-success" onclick="window.open('profile.html')" >ورود</button>
-                    </div>
+                        <div align="center">
+                            <%= f.submit 'ورود' ,:class => 'submit_class_name_here'%>
+                        </div>
+                        <div align="center">
+                        <%= link_to "گذر‌واژّه‌ی خود را فراموش کرده‌اید؟", new_password_path(:user), :id=>"link" %>
+                        </div>
+                        <div align="center">
+                        <%= link_to "از اعضا نیستید؟", new_user_registration_path, :id=>"link"%>
+                        </div>
+                          <% end %>
+                    
                 </div>
             </div>
-
-        
-        
-        
         </div>
-    
+    </div>
         <div class="modal fade" id="smallModal" tabindex="-1" role="dialog" aria-labelledby="smallModal" aria-hidden="true">
             <div class="modal-dialog modal-sm">
                 <div class="modal-content"> 
-                <!--
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                        <h4 class="modal-title" id="myModalLabel">پست الکترونیکی خود را وارد کنید</h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="input-group" id="email">
-                            <input type="text" >
-                        </div> 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary">تایید</button>
-                    </div>
-                    -->
                 </div>
             </div>
         </div>
 	
        
   </body>
+
+ 
+  <script>window.jQuery || document.write('<script src="js/jquery-1.7.2.min.js"><\/script>')<script>
+ <script src="js/bootstrap.min.js"></script>
+
+ <script>
+  $(document).ready(function(){
+    $('.carousel').carousel();
+  });
+</script>
 </html>
