5sh yasaman zohr

--- a/wedding/app/assets/stylesheets/homepage.css
+++ b/wedding/app/assets/stylesheets/homepage.css
@@ -20,6 +20,13 @@ body
     background-color: #E2E2DD;
 
 }
+.my-nav
+{
+    color: #85C2FF;
+    background-color: #E2E2DD;
+    
+}
+
 #textNav
 {
     color: #85C2FF;
