--- a/wedding/app/views/layouts/_navbar.html.erb
+++ b/wedding/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-        <nav class="navbar navbar-fixed-top wed-nav" role="navigation">
+        <nav class="navbar navbar-fixed-top wed-nav" id="wed_nav" role="navigation">
             <div class="container-fluid">
                     <div class="navbar-brand" ><%= locals[:brand] %></div>
                     <%= form_tag '/welcome/search', :method => :get , :class => "navbar-form navbar-left"   do%>
