--- a/wedding/app/views/welcome/index.html.erb
+++ b/wedding/app/views/welcome/index.html.erb
@@ -10,7 +10,7 @@
 	<body id="welcome">
     <div class = "container-fluid" id = "home-nav"> 
 	<nav class="navbar navbar-default navbar-fixed" role="navigation" id ="homeNav">
-            <div class="container-fluid wed-nav" id ="homeNav">
+            <div class="container-fluid my-nav" id ="homeNav">
                     <a class="navbar-brand" href="information.html"></a>
                      <!--<%= form_tag '/home/search', :method => :get do%>
                     <%= text_field_tag :q%>
