--- a/wedding/app/assets/stylesheets/profile.css
+++ b/wedding/app/assets/stylesheets/profile.css
@@ -19,6 +19,10 @@ body
 {
    
 }
+#foott{
+
+  border-color: transparent;
+}
 #profile_desc{
 	font-size: 25px;
 }
@@ -32,10 +36,12 @@ body
 #profile_main-content
 {
    /* margin: 5%; */
-    width: 70%;
-    margin-top: 18%;
+  /*  width: 70%; */
+    margin-top: 2%;
     background-color:transparent;
-   /* background-color: red;*/
+   /* background-color: red; */
+   /* background-image: url('head.png');*/
+
 
 }
 #profile_pic img
