--- a/wedding/app/views/forum_threads/index.html.erb
+++ b/wedding/app/views/forum_threads/index.html.erb
@@ -17,7 +17,7 @@
                 <%= link_to image_tag ("17.jpg") ,{ :class => 'col-md-12 img-responsive' , :alt => 'Responsive image', :id => "prof-pic"}%>
             </div>
             
-      <div class="panel panel-default">
+      <div class="panel panel-info">
           <!-- Default panel contents -->
           <div class="panel-heading"> <b>بحث‌های متداول</b>
           </div>
